src/test/resources/projects/acceptance/maven-hello/src/main/java/com/acme/Main.java
package com.acme;

public final class Main {
    private Main() {
    }

    public static void main(final String[] args) {
        System.out.println("Hello from Maven and javan");
    }
}
