src/test/resources/projects/negative/enum-value-of/src/main/java/com/acme/Main.java
package com.acme;

public final class Main {
    private Main() {
    }

    public static void main(final String[] args) {
        System.out.println(Color.valueOf("RED").name());
    }
}
